Feat: Mixin de coleccion diferida con soporte de ciclo de vida

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,10 @@ add_executable(bibi main.cpp
         src/Core/Component.cpp
         src/Core/Component.hpp
         src/Core/Lifecycle/ILifecycleAware.hpp
+        src/Core/Lifecycle/DeferredCollection.hpp
+        src/Core/Concepts/Pointer.hpp
+        src/Modules/Gui/ElementCollection.hpp
+        src/Core/Concepts/Lifecycle.hpp
 )
 
 target_include_directories(bibi PRIVATE src)
